# creativity-dida-agentscope

./: .autopep8  .gitignore  01.AIDA (AI-Driven Distribution Assistant).docx  01.AIDA (AI-Driven Distribution Assistant).md  Makefile  README.md  SETUP.md  agent.py  app.py  install_dev.py  pyrightconfig.json  request-dida.py  requirements.txt  response
agentscope-server/: .dockerignore  .env.example  Dockerfile  pyproject.toml  response  tools.json
agentscope-server/apps/: 001-demo.py
agentscope-server/tools/: __init__.py
agentscope-server/tools/bookingapi/: booking_pre_cancel.py
agentscope-server/tools/contentapi/: get_countries.py  get_destinations.py  get_hotel_details.py  get_view_types.py
agentscope-server/tools/otherapi/: get_qweather_daily_forecast.py  get_qweather_historical.py  get_qweather_indices.py
agentscope-server/utils/: agentstudio.py  request.py
agentscope-server/workflow/: __init__.py  handoff.py  workflow_conversation.py  workflow_handoffs.py  workflow_multiagent_debate.py  workflow_routing.py
apps/: 001-demo.py
dida-flow/: package.json
nextjs-web/: .env.example  package.json
nextjs-web/app/: globals.css  layout.tsx  page.tsx
nextjs-web/components/: MobileNav.tsx  ScrollTrigger.tsx  SearchBar.tsx  SiteNavigation.tsx  ToolCard.tsx
nextjs-web/lib/: category.ts
tools/bookingapi/: booking_cancel_confirm.py  booking_confirm.py  booking_search.py  get_lowest_price.py  price_confirm.py
tools/contentapi/: get_bed_types.py  get_countries.py  get_destinations.py  get_hotel_details.py  get_hotel_list.py  get_meal_types.py  get_smoking_types.py  get_view_types.py  get_window_types.py
utils/: __init__.py  request.py
workflow/: workflow_concurrent_agents.py
(+49 files in other folders)
